--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="http://www.youtube.com/@bandasinfonicacatanduvabsc5948/featured" target="_blank" rel="Youtube"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
         <p>Banda Sinfônica de Catanduva - SP <br> (2023)</p><br>
-        <p>Feito por <a href="http://https://github.com/Rosi-SB" target="_blank" rel="GitHub">Rosi-SB</a></p>
+        <p>Feito por <a href="https://github.com/Rosi-SB" target="_blank" rel="GitHub">Rosi-SB</a></p>
     </footer>
     
 </body>
