--- a/Historia.html
+++ b/Historia.html
@@ -45,7 +45,7 @@
         </ul>
         <p>Banda Sinfônica de Catanduva - SP <br>(2023)</p>
         <br>
-        <p>Feito por <a href="http://https://github.com/Rosi-SB" target="_blank" rel="GitHub">Rosi-SB</a></p>
+        <p>Feito por <a href="https://github.com/Rosi-SB" target="_blank" rel="GitHub">Rosi-SB</a></p>
     </footer>
     
 </body>
